[workspace]

resolver = "2"

members = [
	"core",
	"cli",
	"gui"
]

[workspace.package]
version = "1.1.0"
authors = ["Antidote1911 <antidote1911@gmail.com>"]

[profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*
