[package]
name = "arsenic"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
argon2 = "0.5.3"
rayon = "1.10"
aead = { version = "0.5.2", features = ["std"] }
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10.1"
blake3 = "1.8.5"
rand = "0.10.1"
getrandom = { version = "0.4", features = ["std"] }
thiserror = "2.0.18"
zeroize = "1.8.2"
deoxys = "0.1"

x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ml-kem  = { version = "0.3", features = ["zeroize"] }
ml-dsa      = { version = "0.1", features = ["getrandom"] }
signature   = "2"
hybrid-array = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "crypto_bench"
harness = false
