[package]
name = "cryptyrust_core"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aead = { version = "0.5.2", features = ["std", "stream"] }
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"
blake3 = "1.8.5"
rand = "0.10.1"
thiserror = "2.0.18"
zeroize = "1.8.2"
tempfile = "3.27.0"
