[package]
name = "cryptyrust_core"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
argon2 = "0.5.3"
rayon = "1.10"
aead = { version = "0.5.2", features = ["std"] }
chacha20poly1305 = "0.10.1"
blake3 = "1.8.5"
rand = "0.10.1"
thiserror = "2.0.18"
zeroize = "1.8.2"
serpent = "0.6.0"
hmac = "0.13.0"
sha2 = "0.11.0"
cipher = "0.5.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "crypto_bench"
harness = false
