[package]
name = "cryptyrust_core"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
argon2 = "0.5.3"
rayon = "1.10"
aead = { version = "0.5.2", features = ["std"] }
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10.1"
blake3 = "1.8.5"
rand = "0.10.1"
thiserror = "2.0.18"
zeroize = "1.8.2"
deoxys = "0.1"
hmac = "0.13.0"
sha2 = "0.11.0"
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "crypto_bench"
harness = false
