[package]
name = "cryptyrust"
version.workspace = true
edition = "2021"

[dependencies]
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["image"] }
rfd = "0.17.2"
arsenic = { path = "../arsenic" }
rayon = "1.12.0"
tempfile = "3"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
rpassword = "7.5.2"
anyhow = "1.0.102"
indicatif = "0.18.4"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.3"
predicates = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
