[package]
name = "cryptyrust"
version.workspace = true
edition = "2021"

[dependencies]
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui_extras = "0.34.2"
rfd = "0.17.2"
cryptyrust_core = { path = "../core" }
base64ct = { version = "1", features = ["alloc"] }
rayon = "1.12.0"
