[package]
name = "cryptyrust"
version.workspace = true
edition = "2021"

[dependencies]
eframe = { version = "0.34.2", features = ["persistence"] }
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["image"] }
rfd = "0.17.2"
arsenic = { path = "../arsenic" }
rayon = "1.12.0"
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
